adding buttons with event listeners, as well as saving the input to local storage. But I'll have to do it for each button.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,56 +29,56 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <!-- added an input group from bootstrap for each time slot during business hours with a button -->
-        <div class="input-group mb-3"> 9AM 
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group mb-3" id="plan"> 9AM 
+          <input type="text" class="form-control" id="inpVal" placeholder="Event" value="" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 10AM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="10AM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon1">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 11AM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="11AM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon2">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 12PM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="12PM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon3">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 1PM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="1PM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon4">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 2PM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="2PM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon5">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 3PM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="3PM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon6">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 4PM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="4PM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon7">Submit</button>
           </div>
         </div>
         <div class="input-group mb-3"> 5PM
-          <input type="text" class="form-control" placeholder="Event" aria-label="Recipient's username" aria-describedby="button-addon2">
+          <input type="text" class="form-control" placeholder="Event" value data-time="5PM" aria-label="Recipient's username" aria-describedby="button-addon2">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="button" id="button-addon8">Submit</button>
           </div>
