--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"/>
       <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
-      <link rel="stylesheet" href="style.css" />
+      <link rel="stylesheet" href="./assets/style.css" />
       <title>Work Day Scheduler</title>
   </head>
 
@@ -26,12 +26,13 @@
     <div class="container invisible text-center m-5"> 
     Appointment added to local storage
       <div class="container visible p-5 calendar">
+        <h3>schedule your appoinment!</h3>
       <!-- Timeblocks go here -->
       </div>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
