--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"/>
       <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
-      <link rel="stylesheet" href="./assets/style.css" />
+      <link rel="stylesheet" href="./Develop/style.css" />
       <title>Work Day Scheduler</title>
   </head>
 
@@ -33,6 +33,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./develop/script.js"></script>
   </body>
 </html>
