--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"/>
       <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"/>
       <link rel="stylesheet" href="./Develop/style.css" />
+      <script src="script.js" async></script>
       <title>Work Day Scheduler</title>
   </head>
 
@@ -33,6 +34,5 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./develop/script.js"></script>
   </body>
 </html>
